Update in preparation for publishing an article on building accessible WPF apps.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /GFClock/obj/x64/Debug
+/.vs/GFClock/v16/Server/sqlite3
+/.vs/GFClock/v16/.suo
+/GFClock/bin/x64/Debug
