Don't override the WPF not-auto-check radio button behavior.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /GFClockWPF/GFClockWPF_eboka22l_wpftmp.csproj
 /GFClockWinForms/bin/x64/Debug
 /GFClockWinForms/obj/x64/Debug
+/x64/Debug
+/GFClockWinForms/obj/x86/Debug
